<resources>
    <string name="app_name">ソーシャル拍手目覚まし</string>
    <string name="makeAccount_button">新規登録</string>
    <string name="signIn_button">サインイン</string>
    <string name="MakeAccount_button">新規作成</string>
    <string name="makeTeam_textView">チームを\n作成しましょう！</string>
    <string name="teamNameDecision_button">決定</string>
    <string name="makeTeam_butto">チーム作成</string>
    <string name="makeaccount_button">チーム作成</string>
    <string name="joinText_button">チームに加わる</string>
    <string name="makeTeam_button">チーム作成</string>
    <string name="teamDecision_button">決定</string>
    <string name="joinTeam_textView">チームに入りましょう！</string>
    <string name="stop_buton">寝る</string>
    <string name="home_textView">設定されたタイマーの時間</string>
    <string name="timeSet_button">タイマーを設定する</string>
    <string name="timeSetting_textView">タイマーの設定</string>
    <string name="timeDecision_button">決定</string>
    <string name="applause_textView">拍手でメンバーを起こそう！</string>
    <string name="applause">起きる</string>
    <string name="successComment_textView">無事に全員起きました！\n今日も1日頑張るぞい！！</string>
    <string name="success_textView">おめでとう！！</string>
    <string name="successBack_button">戻る</string>
    <string name="fail_textView">拍手タイム終了</string>
    <string name="failComment_textView">鷹野 東山\n\nを目覚めさせることができませんでした・・・</string>
    <string name="failBack_button">戻る</string>
    <string name="nameDecision_button">決定</string>
    <string name="timerSetting">時刻設定</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_textView">新しい名前</string>
    <string name="newId_textView">新しいID(メールアドレス)</string>
    <string name="password_textView">Password(6文字以上)</string>
    <string name="Id_textView">ID</string>
    <string name="Password_textView">Password</string>
    <string name="teamName_textView">チーム名</string>
    <string name="secret_textView">合言葉</string>
    <string name="newTeamName_editText"></string>
    <string name="teamName_editText"></string>
    <string name="newTeamName_textView">新しいチーム名</string>
    <string name="secretWord_textView">合言葉</string>
    <string name="maxApplause_textView">最大拍手回数</string>
    <string name="applauseFinishTime_textView">拍手終了時間</string>
    <string name="titleFirst_textView">拍手喝采で起きよう！</string>
    <string name="condtion_text">まだ 鷹野 が\n起きていません</string>
    <string name="alarmTime_text">残り334秒で拍手タイム終了</string>
    <string name="count_text">拍手回数 -</string>
    <string name="member_condition_button">メンバーの状況</string>
    <string name="todayRanking_button">今日のランキング</string>
    <string name="bed_image">TODO</string>
    <string name="count_display_textView">回</string>
    <string name="applause_display">分</string>
    <string name="hakusyu_boy">TODO</string>
    <string name="hakusyu_girl">TODO</string>
</resources>