<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleFirst_textView"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/title_design"
        android:gravity="center"
        android:text="@string/titleFirst_textView"
        android:textColor="#000"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/joinTeam_button"
        android:layout_width="208dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/action_design"
        android:text="@string/joinText_button"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeAccount_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/makeAccount_button"
        android:layout_width="208dp"
        android:layout_height="80dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/action_design"
        android:text="@string/makeTeam_button"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bed_image" />

    <ImageView
        android:id="@+id/bed_image"
        android:layout_width="260dp"
        android:layout_height="260dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleFirst_textView"
        app:srcCompat="@drawable/bed_boy_wake"
        android:contentDescription="@string/bed_image" />

</androidx.constraintlayout.widget.ConstraintLayout>