<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fail">

    <TextView
        android:id="@+id/fail_textView"
        android:layout_width="347dp"
        android:layout_height="82dp"
        android:text="@string/fail_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/failComment_textView"
        android:layout_width="293dp"
        android:layout_height="106dp"
        android:text="@string/failComment_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fail_textView"
        app:layout_constraintVertical_bias="0.205" />

    <Button
        android:id="@+id/failBack_button"
        android:layout_width="132dp"
        android:layout_height="72dp"
        android:text="@string/failBack_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/failComment_textView"
        app:layout_constraintVertical_bias="0.835" />
</androidx.constraintlayout.widget.ConstraintLayout>