<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Success">

    <TextView
        android:id="@+id/success_textView"
        android:layout_width="324dp"
        android:layout_height="61dp"
        android:text="@string/success_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/successComment_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/successComment_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success_textView" />

    <Button
        android:id="@+id/successBack_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/successBack_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/successComment_textView"
        app:layout_constraintVertical_bias="0.806" />
</androidx.constraintlayout.widget.ConstraintLayout>