<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/home_textView"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/title_design"
        android:gravity="center"
        android:text="@string/home_textView"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/stop_button_design"
        android:text="@string/stop_buton"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayRanking_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/backTeam_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/back_team_button_design"
        android:text="@string/backTeam_button"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/menber_condition_button"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/action_design"
        android:text="@string/member_condition_button"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_textView" />

    <Button
        android:id="@+id/todayRanking_button"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/action_design"
        android:text="@string/todayRanking_button"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menber_condition_button" />
</androidx.constraintlayout.widget.ConstraintLayout>