<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeAccount">

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginBottom="67dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/newId_editText"
        app:layout_constraintStart_toStartOf="@+id/password_textView"
        app:layout_constraintTop_toBottomOf="@+id/name_textView"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/newId_editText"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginBottom="67dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/newPassword_editText"
        app:layout_constraintStart_toStartOf="@+id/password_textView"
        app:layout_constraintTop_toBottomOf="@+id/newId_textView"
        app:layout_constraintVertical_bias="0.03" />

    <EditText
        android:id="@+id/newPassword_editText"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginBottom="192dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_textView"
        app:layout_constraintVertical_bias="0.126" />

    <Button
        android:id="@+id/nameDecision_button"
        android:layout_width="142dp"
        android:layout_height="81dp"
        android:text="@string/nameDecision_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword_editText"
        app:layout_constraintVertical_bias="0.743" />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="205dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/password_textView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/newPassword_editText"
        app:layout_constraintTop_toBottomOf="@+id/newId_editText" />

    <TextView
        android:id="@+id/newId_textView"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/newId_textView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/newId_editText"
        app:layout_constraintTop_toBottomOf="@+id/name_editText" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/name_textView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/name_editText"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>