<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeSetting">

    <EditText
        android:id="@+id/maxApplause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="328dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerSetting" />

    <EditText
        android:id="@+id/applauseFinishTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxApplause"
        app:layout_constraintVertical_bias="0.23"
        android:autofillHints="" />

    <Button
        android:id="@+id/timeDecision_button"
        android:layout_width="166dp"
        android:layout_height="71dp"
        android:text="@string/timeDecision_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/applauseFinishTime"
        app:layout_constraintVertical_bias="0.488" />

    <TextView
        android:id="@+id/timeSetting_textView"
        android:layout_width="293dp"
        android:layout_height="104dp"
        android:text="@string/timeSetting_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/timerSetting"
        android:layout_width="197dp"
        android:layout_height="75dp"
        android:text="@string/timerSetting"
        android:onClick="showTimePicker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeSetting_textView"
        app:layout_constraintVertical_bias="0.103" />

</androidx.constraintlayout.widget.ConstraintLayout>